# aks-devops-lab

./: .cursorrules  .dockerignore  .env.example  .gitignore  .plan  .progress  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci-pr.yml
.tracking/: notes.md
app/backend/: .dockerignore  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
app/backend/migrations/: README.md
app/backend/src/backend/: __init__.py  app.py  config.py  db.py  models.py  pipeline.py  schemas.py  wsgi.py
app/backend/src/backend/api/: __init__.py  health.py  runs.py
app/backend/tests/: conftest.py  test_health.py  test_runs.py
app/frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/api/: __init__.py
backend/infrastructure/: __init__.py  db.py
backend/pipeline/: ml_pipeline.py
backend/services/: __init__.py
compose/: .env.example  README.md  docker-compose.yml
docs/: architecture.md  bluegreen.md  deployment.md  pipelines.md  terraform-bootstrap.md  terraform.md
docs/adr/: 0001-postgres-over-sqlite.md  (+2 more)
frontend/: index.html  vite.config.ts
frontend/src/: App.css  (+2 more)
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
legacy/: Dockerfile  README.md
pipelines/: README.md  azure-pipelines.yml
scripts/: README.md  bluegreen-status.sh  bluegreen-switch.sh  smoke.sh  tf-bootstrap.ps1  tf-bootstrap.sh  tf-destroy-main.sh
tests/: __init__.py  conftest.py  test_api_v1_runs.py
(+75 files in other folders)
